--- a/build.gradle
+++ b/build.gradle
@@ -11,5 +11,6 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.0'
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.15.0'
 }
